# mini-database-engine

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  build_db_engine.bat  build_db_engine.sh  demo.sql
include/: b_tree.h  buffer_pool.h  database_engine.h  index_manager.h  query_parser.h  storage_engine.h  transaction_manager.h  types.h
src/: CMakeLists.txt  b_tree.cpp  buffer_pool.cpp  database_engine.cpp  index_manager.cpp  main.cpp  query_parser.cpp  storage_engine.cpp  transaction_manager.cpp
tests/: comprehensive_test.txt  detailed_persistence_test.txt  expansion_test.txt  final_multi_table_test.txt  final_verification.txt  fresh_start_test.txt  multi_table_fix_test.txt  persistence_verification.txt  persistence_verify.txt  products_only_test.txt  session_test.txt  users_addition_test.txt
